 - Bug fix: wwt (but not wit) ignored the parameter of option --include-path.
 - Because of compiler warnings: Switched from utime() to utimes().


wit v2.08a r4027 - 2012-08-31

 - New command: wit IMGFILES: Print a list (1 file per line) with all image
   files inlcuding their associated split files. If option --null (-0) is set,
   the list is NULL terminated to support all possible file names.
 - New command: wit REMOVE: Removes the image files including their associated
   split files.
 - New option --scan-progress: Print a log message is printed for each found
   image while scanning the local file system.
 - Bug fix: "wit COPY --source a --dest b" threw an error, because the tool
   thought, that no source was defined.
 - Bug fix for "wwt ADD --raw": wwt copied to large (double layer) images.


@@MODULE(last-history.txt)@@


Road map (for some point in the future):

 I have already stopped the development in favor of my SZS tools. But there
 are some already planned extensions:

 - GameCube support is still incomplete.
    - Creation of GameCube disc is not possible.

 - There are already code fragments implemented to trim discs in three levels:
    - Move partitions as whole to eliminate disc holes.
    - Move partition sectors to reduce partition size (alternative for
      partition scrubbing). Fake signing is necessary.
    - Move files of partitons to optimize the step above a little.
   For all trimming levels alignment factors may be set and it should be
   possible to set special alignments for GameCube sound files.

 - On the fly patching: Create a new image as combination of 2 or more sources.
   Therefor trimming (sector or file level) is needed.


*******************************************************************************
*******                              END                                *******
*******************************************************************************