@@ -340,7 +340,16 @@ enumError SetupWBFS	( WBFS_t * w, SuperFile_t * sf, bool print_err,
 			  int sector_size, bool recover );
 enumError CreateGrowingWBFS
 			( WBFS_t * w, SuperFile_t * sf, off_t size, int sector_size );
-enumError OpenWBFS	( WBFS_t * w, ccp filename, bool print_err, wbfs_param_t * par );
+
+enumError OpenWBFS
+(
+	WBFS_t		*w,		// valid data structure
+	ccp		filename,	// filename to open
+	bool		open_modify,	// true: open read+write
+	bool		print_err,	// true: pprint error messages
+	wbfs_param_t	*par		// NULL or parameter record
+);
+
 enumError FormatWBFS	( WBFS_t * w, ccp filename, bool print_err,
 			  wbfs_param_t * par, int sector_size, bool recover );
 enumError RecoverWBFS	( WBFS_t * w, ccp fname, bool testmode );
