@@ -154,6 +154,18 @@ wit v2.08a r4027 - 2012-08-31
  - Bug fix for "wwt ADD --raw": wwt copied to large (double layer) images.
 
 
+wit v2.09a r4047 - 2012-09-08
+
+ - Option --scan-progress prints more info and flush every log output.
+ - Bug fix: "wit MOVE a.wbfs ..." will work now.
+ - New escapes for output files: The old '%f' is the source filename without
+   path (like 'name.ext'). Now we have also '%g' and '%h' as split of '%f':
+   '%g' is file name without extension ('name') and '%h' is the extension
+   ('.ext').
+ - Bug fix: "wit COPY --recurse a --dest b" threw an error, because the tool
+   thought, that no source was defined (same as with --source before).
+
+
 @@MODULE(last-history.txt)@@
 
 
